--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ Amgreat was created to produce cutting-edge technologies to aid the society  in 
 	<div class="container product-1 d-flex f-wrap mt-5">
 	<div class="col-6 product-info-1">
 		<h1>All your health information in one place</h1>
-		<p>Learn about the current diseases and how to protect your body from its. Moreover, you can gain in-depth information about the symptoms, ingredients receive the diagnosis from the Amgreat assisstant that works 24/7.</p>
+		<p>Learn about the current diseases and how to protect your body from its. Moreover, you can gain in-depth information about the symptoms, ingredients, receive the diagnosis from the Amgreat assisstant that works 24/7.</p>
 		<div class="circle-1">
 		<i class="fa fa-arrow-right"></i></div>
 		<h3>Get amgreatApp on</h3>
